# battler

./: .geminiignore  .gitignore  Cargo.toml  README.md  battle-logs.md  cspell.json  events.md  fxlang-analysis.md  fxlang.md  package-lock.json  package.json  published-crates-test.sh  tsconfig.base.json
battler/: Cargo.toml  README.md
battler-ai/: Cargo.toml  build.rs
battler-ai/src/: ai.rs  choice.rs  client.rs  lib.rs
battler-ai/src/gemini/: gemini.rs  mod.rs
battler-ai/src/random/: random.rs
battler-ai/src/trainer/: common.rs  context.rs  hooks.rs  mod.rs  trainer.rs  trainer_flag.rs
battler-ai/tests/: scenario.rs  tests.rs
battler-ai/tests/scenarios/: simple_double_battle.json  simple_starter_battle.json  simple_starter_battle_damage_only.json
battler-ai/tests/tests/: gemini_test.rs  random_test.rs
battler-calc/: Cargo.toml
battler-calc/battler-calc-client-util/: Cargo.toml
battler-calc/battler-calc-client-util/src/: lib.rs  mon.rs
battler-calc/src/: damage.rs  hooks.rs  lib.rs  simulate.rs  state.rs  stats.rs
battler-calc/src/common/: mod.rs  output.rs  range.rs  range_distribution.rs
battler-choice/: Cargo.toml  post-build.mjs
battler-choice/battler-choice-wasm/: Cargo.toml
battler-choice/battler-choice-wasm/src/: lib.rs
battler-choice/src/: lib.rs  wasm.rs
battler-client/: Cargo.toml
battler-client/src/: client.rs  discovery.rs  lib.rs  log.rs  manager.rs  state.rs  state_util.rs  ui.rs
battler-data/: Cargo.toml
battler-data/src/: lib.rs  test_util.rs
battler-data/src/abilities/: ability_data.rs  ability_flag.rs  mod.rs
battler-data/src/clauses/: clause_data.rs  mod.rs  rules.rs
battler-data/src/common/: default_true_bool.rs  fraction.rs  id.rs  mod.rs
battler-data/src/conditions/: condition_data.rs  mod.rs
battler-data/src/datastore/: aliases.rs  data_store.rs  datastore.rs  local.rs  mod.rs
battler-data/src/items/: item_data.rs  item_flag.rs  item_input.rs  item_target.rs  mod.rs
battler-data/src/mons/: color.rs  event.rs  evolution.rs  gender.rs  learnset.rs  leveling_rate.rs  mod.rs  nature.rs  shiny_chance.rs  species_data.rs  species_flag.rs  stat.rs  type.rs
battler-data/src/moves/: accuracy.rs  boost.rs  mod.rs  mon_override.rs  move_category.rs  move_data.rs  move_flag.rs  move_target.rs  multihit_type.rs  ohko_type.rs  self_destruct_type.rs  switch_type.rs
battler-fuzz-test-generator/: Cargo.toml
battler-fuzz-test-generator/src/: lib.rs
battler-local-data/: Cargo.toml
battler-local-data/src/: lib.rs
battler-multiplayer-client/: Cargo.toml
battler-multiplayer-client/src/: lib.rs
battler-multiplayer-service/: Cargo.toml
battler-multiplayer-service-client/: Cargo.toml
battler-multiplayer-service-client/src/: lib.rs  wamp.rs
battler-multiplayer-service-producer/: Cargo.toml
battler-multiplayer-service-producer/src/: lib.rs  producer.rs
battler-multiplayer-service-producer/src/common/: auth.rs
battler-multiplayer-service-producer/src/handlers/: mod.rs  (+4 more)
battler-multiplayer-service-producer/tests/: producer_test.rs
battler-multiplayer-service/battler-multiplayer-service-schema/: Cargo.toml
battler-multiplayer-service/src/: api.rs  error.rs  lib.rs  service.rs
battler-multiplayer-service/tests/: ai_test.rs  service_test.rs
battler-prng/: Cargo.toml
battler-prng/src/: lib.rs  rand_util.rs
battler-server/: Cargo.toml
battler-server/src/: lib.rs  main.rs
battler-server/tests/: server_test.rs
battler-service/: Cargo.toml
battler-service-client/: Cargo.toml
battler-service-client/src/: client.rs  direct.rs  lib.rs  wamp.rs
battler-service-producer/: Cargo.toml
battler-service-producer/src/: lib.rs  producer.rs
battler-service-producer/tests/: producer_test.rs
battler-service/battler-service-schema/: Cargo.toml
battler-service/src/: api.rs  error.rs  lib.rs  log.rs  service.rs  timer.rs
battler-service/tests/: service_test.rs
battler-state/: Cargo.toml  post-build.mjs
battler-state/js/: state_selectors.ts  tsconfig.json
battler-state/js-tests/: package-lock.json  package.json  tsconfig.json
battler-state/src/: discovery.rs  lib.rs  log.rs  state.rs  state_selectors.rs  state_util.rs  ui.rs  wasm.rs
battler-test-utils/: Cargo.toml
battler-test-utils/src/: battle_io_verifier.rs  cases.rs  data_store.rs  error_assert.rs  lib.rs  log_assert.rs  log_util.rs  log_verification.rs  logging.rs  rng.rs  test_battle_builder.rs
battler-wamp/: Cargo.toml  README.md
battler-wamp-compat-test-bin/: Cargo.toml
battler-wamp-compat-test-bin/src/: main.rs
battler-wamp/battler-wamp-uri/: Cargo.toml  README.md
battler-wamp/battler-wamp-values/: Cargo.toml  README.md
battler-wamp/serde-struct-tuple/: Cargo.toml  README.md
battler-wamp/serde-struct-tuple-enum/: Cargo.toml  README.md
battler-wamp/src/: lib.rs
battler-wamp/test-utils/: Cargo.toml
battler-wamp/tests/: connection_test.rs  direct_connection_test.rs  pub_sub_test.rs  realm_test.rs  rpc_test.rs  undisputed_auth_test.rs  wamp_scram_test.rs
battler-wamprat/: Cargo.toml  README.md
battler-wamprat-schema/: Cargo.toml  README.md
battler-wamprat-schema/battler-wamprat-schema-proc-macro/: Cargo.toml  README.md
battler-wamprat-schema/src/: lib.rs
battler-wamprat/battler-wamprat-error/: Cargo.toml  README.md
battler-wamprat/battler-wamprat-message/: Cargo.toml  README.md
battler-wamprat/battler-wamprat-schema/: Cargo.toml
battler-wamprat/battler-wamprat-uri/: Cargo.toml  README.md
battler-wamprat/src/: lib.rs
battler-wamprat/tests/: pub_sub_test.rs  rpc_test.rs  wamp_scram_test.rs
battler/src/: lib.rs
battler/test_cases/: battle_builder_build_tests.json  battle_options_validate_tests.json  hidden_power_type_calculation_tests.json  stat_calculation_tests.json  team_validator_tests.json
battler/tests/: action_priority_test.rs  auto_end_test.rs  auto_shift_test.rs  forfeit_test.rs  move_input_test.rs  move_usage_test.rs  outside_effect_test.rs  switch_after_faint_test.rs  switch_bad_input_test.rs  switch_out_state_test.rs  team_preview_test.rs  team_validation_test.rs  tests.rs
(+1243 files in other folders)
