[workspace]
resolver = "2"
members = [
    "battler",
    "battler-client",
    "battler-data",
    "battler-service",
    "battler-service/battler-service-schema",
    "battler-service-client",
    "battler-test-utils",
    "battler-wamp",
    "battler-wamp/battler-wamp-values",
    "battler-wamp/battler-wamp-values/battler-wamp-values-proc-macro",
    "battler-wamp/serde-struct-tuple",
    "battler-wamp/serde-struct-tuple/serde-struct-tuple-proc-macro",
    "battler-wamp/serde-struct-tuple-enum",
    "battler-wamp/serde-struct-tuple-enum/serde-struct-tuple-enum-proc-macro",
    "battler-wamp/test-utils",
    "battler-wamprat",
    "battler-wamprat/battler-wamprat-error",
    "battler-wamprat/battler-wamprat-error/battler-wamprat-error-proc-macro",
    "battler-wamprat/battler-wamprat-message",
    "battler-wamprat/battler-wamprat-message/battler-wamprat-message-proc-macro",
    "battler-wamprat/battler-wamprat-uri",
    "battler-wamprat/battler-wamprat-uri/battler-wamprat-uri-proc-macro",
    "battler-wamprat-schema",
    "battler-wamprat-schema/battler-wamprat-schema-proc-macro",
]
