[workspace]
resolver = "2"
members = [
    "battler",
    "battler-ai",
    "battler-calc",
    "battler-calc/battler-calc-client-util",
    "battler-choice",
    "battler-client",
    "battler-data",
    "battler-multiplayer-service/battler-multiplayer-service-schema",
    "battler-prng",
    "battler-service",
    "battler-service/battler-service-schema",
    "battler-service-client",
    "battler-service-producer",
    "battler-test-utils",
    "battler-wamp",
    "battler-wamp/battler-wamp-uri",
    "battler-wamp/battler-wamp-values",
    "battler-wamp/battler-wamp-values/battler-wamp-values-proc-macro",
    "battler-wamp/serde-struct-tuple",
    "battler-wamp/serde-struct-tuple/serde-struct-tuple-proc-macro",
    "battler-wamp/serde-struct-tuple-enum",
    "battler-wamp/serde-struct-tuple-enum/serde-struct-tuple-enum-proc-macro",
    "battler-wamp/test-utils",
    "battler-wamprat",
    "battler-wamprat/battler-wamprat-error",
    "battler-wamprat/battler-wamprat-error/battler-wamprat-error-proc-macro",
    "battler-wamprat/battler-wamprat-message",
    "battler-wamprat/battler-wamprat-message/battler-wamprat-message-proc-macro",
    "battler-wamprat/battler-wamprat-uri",
    "battler-wamprat/battler-wamprat-uri/battler-wamprat-uri-proc-macro",
    "battler-wamprat-schema",
    "battler-wamprat-schema/battler-wamprat-schema-proc-macro",
]

[workspace.dependencies]

# General utility.
ahash = "0.8"
async-trait = "0.1"
indexmap = "2.9"
itertools = "0.14"
num = "0.4"
rand = "0.9"
regex = "1.11"
unicase = "2.8"
uuid = { version = "1.16", features = ["fast-rng", "serde", "v4"] }
zone-alloc = { version = "0.4.4", features = ["std", "may-dangle"] }
zone-alloc-strong-handle-derive = "0.1"

# Error handling.
anyhow = "1.0"
thiserror = "2.0"

# Serialization.
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_string_enum = "0.2"

# Async.
futures-channel = "0.3"
futures-util = "0.3"
tokio = { version = "1.45", features = ["full"] }

# Logging.
log = "0.4"

# Testing,
assert_matches = "1.5"
pretty_assertions = "1.4"
pretty_assertions_sorted = "1.2"

# WAMP.
argon2 = "0.5"
base64 = "0.22"
hmac = "0.12"
password-hash = { version = "0.5", features = ["getrandom"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rustls = "0.23"
sha2 = "0.10"
stringprep = "0.1"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }

# Macros.
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Crates residing within this repository.
battler-wamp = "0.5.0"
battler-wamp-uri = "0.1.0"
battler-wamp-values = "0.2.2"
battler-wamprat = "0.7.0"
battler-wamprat-error = "0.2.0"
battler-wamprat-message = "0.1.3"
battler-wamprat-schema = "0.4.0"
battler-wamprat-uri = "0.5.0"
serde-struct-tuple = "0.1.3"
serde-struct-tuple-enum = "0.1.0"

[profile.test]
opt-level = 2
