[package]
name = "battler-calc"
version = "0.1.0"
edition = "2024"
description = "Damage and stat calculations for battler."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-calc"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
num = { workspace = true }
uuid = { workspace = true }

battler-data = { path = "../battler-data" }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

battler-test-utils = { path = "../battler-test-utils" }
