[package]
name = "battler-choice"
version = "0.3.0"
edition = "2024"
description = "Choice serialization and deserialization for battler."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-choice"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
typescript = ["dep:ts-rs"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
thiserror = { version = "2.0", default-features = false }
ts-rs = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = { version = "0.6" }
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
