[package]
name = "battler-client"
version = "0.1.0"
edition = "2024"
description = "Client battles managed via battler."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-client"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

battler = { path = "../battler" }
battler-service = { path = "../battler-service" }
battler-service-client = { path = "../battler-service-client" }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

battler-test-utils = { path = "../battler-test-utils" }
