[package]
name = "battler-data"
version = "0.1.0"
edition = "2024"
description = "Data objects for battler."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-ai"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0"
lazy_static = "1.4.0"
num = "0.4.1"
regex = "1.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_string_enum = "0.2"
unicase = "2.6.0"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
