[package]
name = "battler-data"
version = "0.1.0"
edition = "2024"
description = "Data objects for battler."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-ai"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
num = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_string_enum = { workspace = true }
unicase = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
