[package]
name = "battler-data"
version = "0.1.0"
edition = "2024"
description = "Data objects for battler."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-data"

[features]
default = ["std"]

std = []

[dependencies]
anyhow = { version = "1.0", default-features = false }
hashbrown = { workspace = true }
num = { version = "0.4", default-features = false }
once_cell = { version = "1.21", default-features = false, features = ["alloc", "race"] }
regex = { version = "1.11", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_string_enum = { workspace = true }
unicase = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
