[package]
name = "battler-multiplayer-service-producer"
version = "0.1.0"
edition = "2024"
description = "WAMP producer implementation for battler-multiplayer-service."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-multiplayer-service-producer"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

battler-wamp = { workspace = true }
battler-wamp-values = { workspace = true }
battler-wamprat = { workspace = true }
battler-wamprat-schema = { workspace = true }

battler = { path = "../battler" }
battler-multiplayer-service = { path = "../battler-multiplayer-service" }
battler-multiplayer-service-schema = { path = "../battler-multiplayer-service/battler-multiplayer-service-schema" }
battler-service-producer = { path = "../battler-service-producer" }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

battler-multiplayer-service-client = { path = "../battler-multiplayer-service-client" }
battler-test-utils = { path = "../battler-test-utils" }
