[package]
name = "battler-multiplayer-service"
version = "0.1.0"
edition = "2024"
description = "Service for managing multiplayer Pokémon battles in Rust."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-multiplayer-service"

[features]
typescript = ["dep:ts-rs", "battler/typescript", "battler-service/typescript"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
async-scoped = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true, optional = true }
unicase = { workspace = true }
uuid = { workspace = true }

battler = { workspace = true }
battler-ai = { path = "../battler-ai" }
battler-client = { path = "../battler-client" }
battler-service = { path = "../battler-service" }
battler-service-client = { path = "../battler-service-client" }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

battler-multiplayer-client = { path = "../battler-multiplayer-client" }
battler-multiplayer-service-client = { path = "../battler-multiplayer-service-client" }
battler-test-utils = { path = "../battler-test-utils" }
