[package]
name = "battler-prng"
version = "0.1.0"
edition = "2024"
description = "RNG for battler."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-prng"

[dependencies]
rand = { workspace = true }

[dev-dependencies]
