[package]
name = "battler-service-client"
version = "0.1.0"
edition = "2024"
description = "Client wrapper for battler-service."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-service-client"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

battler-wamp-values = { workspace = true }
battler-wamprat = { workspace = true }

battler = { path = "../battler" }
battler-service = { path = "../battler-service" }
battler-service-schema = { path = "../battler-service/battler-service-schema" }

[dev-dependencies]
