[package]
name = "battler-service-producer"
version = "0.1.0"
edition = "2024"
description = "WAMP producer implementation for battler-service."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-service-producer"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

battler-wamp = { workspace = true }
battler-wamp-values = { workspace = true }
battler-wamprat = { workspace = true }
battler-wamprat-schema = { workspace = true }

battler = { path = "../battler" }
battler-service = { path = "../battler-service" }
battler-service-schema = { path = "../battler-service/battler-service-schema" }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

battler-wamp-uri = { workspace = true }

battler-service-client = { path = "../battler-service-client" }
battler-test-utils = { path = "../battler-test-utils" }
