[package]
name = "battler-service"
version = "0.1.0"
edition = "2024"
description = "Service for managing Pokémon battles in Rust."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-service"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0"
battler = { path = "../battler" }
futures-util = "0.3"
serde = "1.0"
serde_string_enum = "0.2"
tokio = { version = "1.41.0", features = ["full"] }
unicase = "2.6"
uuid = { version = "1.16.0", features = ["serde"] }

[dev-dependencies]
assert_matches = "1.5.0"
battler-test-utils = { path = "../battler-test-utils" }
itertools = "0.11.0"
pretty_assertions = "1.4.0"
