[package]
name = "battler-service"
version = "0.1.0"
edition = "2024"
description = "Service for managing Pokémon battles in Rust."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-service"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
unicase = { workspace = true }
uuid = { workspace = true }

battler = { path = "../battler" }

[dev-dependencies]
assert_matches = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }

battler-test-utils = { path = "../battler-test-utils" }