[package]
name = "battler-service"
version = "0.1.0"
edition = "2024"
description = "Service for managing Pokémon battles in Rust."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-service"

[features]
typescript = ["dep:ts-rs", "battler/typescript"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true, optional = true }
unicase = { workspace = true }
uuid = { workspace = true }

battler = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }

battler-test-utils = { path = "../battler-test-utils" }