[package]
name = "battler-state"
version = "0.1.0"
edition = "2024"
description = "Client state for battles managed via battler."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-state"

[features]
default = ["std"]

std = [
    "battler/std",
]

[dependencies]
anyhow = { version = "1.0", default-features = false }
hashbrown = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

battler = { path = "../battler", default-features = false }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

battler-test-utils = { path = "../battler-test-utils" }
