[package]
name = "battler-test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
battler = { path = "../battler" }
itertools = "0.11.0"
pretty_assertions = "1.4.0"
pretty_assertions_sorted = "1.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
