[package]
name = "battler-test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
pretty_assertions_sorted = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }

battler-prng = { workspace = true }

battler = { path = "../battler", default-features = false }
battler-local-data = { path = "../battler-local-data" }
