[package]
name = "battler-wamp-compat-test-bin"
version = "0.1.0"
edition = "2024"
description = "Test binary for battler-wamp compatibility tests."
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
battler-wamp = { workspace = true }
battler-wamp-uri = { workspace = true }
battler-wamp-values = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-core = { workspace = true }
