[package]
name = "battler-wamp"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.83"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
quote = "1.0"
rand = "0.8.5"
regex = "1.11"
rustls = "0.23.16"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-struct-tuple = { path = "serde-struct-tuple" }
serde-struct-tuple-enum = { path = "serde-struct-tuple-enum" }
syn = "2.0.85"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics" ] }

[dev-dependencies]
assert_matches = "1.5.0"
test-utils = { path = "test-utils" }
