[package]
name = "battler-wamp"
version = "0.3.3"
edition = "2024"
description = "Asynchronous library for WAMP messaging."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["wamp", "websocket", "router", "peer"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-wamp"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
battler-wamp-values = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
password-hash = { workspace = true }
pbkdf2 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_string_enum = { workspace = true }
serde-struct-tuple = { workspace = true }
serde-struct-tuple-enum = { workspace = true }
sha2 = { workspace = true }
stringprep = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

test-utils = { path = "test-utils" }
