[package]
name = "battler-wamprat-schema"
version = "0.1.0"
edition = "2024"
description = "Procedural macro for strongly-typed WAMP peers."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["wamp", "websocket", "router", "peer"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-wamprat-schema"

[dependencies]

[dev-dependencies]
